Prevent Twitter embeds from cutting off.  Issue #2166

--- a/iOS/Resources/styleSheet.css
+++ b/iOS/Resources/styleSheet.css
@@ -192,9 +192,14 @@ code, pre {
 	padding: 0;
 }
 
-img, figure, iframe, div {
+img, figure, div {
 	max-width: 100%;
 	height: auto !important;
+	margin: 0 auto;
+}
+
+iframe {
+	max-width: 100%;
 	margin: 0 auto;
 }
 
